<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BWA MOV</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui film yang sedang tayang</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan update film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk transaksi tiket nonton</string>
    <string name="memulai">Memulai</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="daftar_akun_baru">Daftar Akun Baru</string>
    <string name="edt_password">Password</string>
    <string name="mov">MOV</string>
    <string name="btn_login">Masuk Akun</string>
    <string name="nama">Nama</string>
    <string name="email">Email Address</string>
    <string name="email_address">aldirinal.aldi@gmail.com</string>
    <string name="sign_up">Sign Up</string>
    <string name="back">back</string>
    <string name="photo">Photo</string>
    <string name="simpan_dan_lanjutkan">Simpan dan Lanjutkan</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="judul">Avenger: Infinity War</string>
    <string name="genre">Action, Sci-fi, Kids</string>
    <string name="storyboard">Storyboard</string>
    <string name="detail_story">The Avengers must stop Thanos, a mad Titan, and his army from getting their hands on all the infinity stones. However, the mad Titan is prepared to go to any lengths to carry out his insane plan.</string>
    <string name="artist">Who Played</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="beli_tiket"> Beli Tiket </string>
    <string name="layar_bioskop">LAYAR BIOSKOP</string>
    <string name="batalkan">Batalkan</string>
    <string name="date_and_time">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="seat_no_c1">Seat No. C1</string>
    <string name="seat_no_c2">Seat No. C2</string>
    <string name="total_harus_dibayar">Total Harus Dibayar</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="simpan_data_baru">Simpan Data Baru</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="welcome">Selamat Datang\n Aldi Rinaldi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="rate">7</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
</resources>