<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    tools:context=".onboarding.OnboardingOneActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/pilih_bangku"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="12 Aug, 10 AM"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/when"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:text="Depok Mall, Cinema 3"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cinema"
        />

    <TextView
        android:id="@+id/when"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="When"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_and_time"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_calendar"
        android:drawablePadding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/when"/>

    <TextView
        android:id="@+id/cinema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cinema"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:drawableLeft="@drawable/ic_local_movies"
        android:drawablePadding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date"/>

    <TextView
        android:id="@+id/item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Items"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cinema"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_checkout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item" />

    <TextView
        android:id="@+id/eWallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/e_wallet"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_checkout" />

    <TextView
        android:id="@+id/totalBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_balance"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_wallet"
        android:drawablePadding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eWallet"/>

    <TextView
        android:id="@+id/tv_saldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="IDR.200.000"
        android:textColor="@color/Green"
        android:textStyle="bold"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@id/totalBalance"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_bayar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/colorPink"
        android:text="@string/bayar_sekarang"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_batalkan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:text="@string/batalkan"
        android:backgroundTint="@color/colorBlueGrey"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_bayar" />


</androidx.constraintlayout.widget.ConstraintLayout>